adicionado controlador de cliente completo
